--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,27 @@ div {
   padding: 10px;
   margin-top: 10px;
 }
+h1 {
+  text-align: center;
+  text-decoration: underline;
+}
+.button-class {
+  background-color: #065d93;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 200px;
+  border-radius: 5px;
+}
+.button-class:active {
+  opacity: 80%;
+}
+ul {
+  list-style: none;
+}
