--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+:root {
+  --button-bacground: #065d93;
+  --modal-background: lightgray;
+  --modal-container: ;
+}
 html {
   height: 100%;
   width: 100%;
@@ -12,7 +17,7 @@ h1 {
   text-decoration: none;
 }
 .button-class {
-  background-color: #065d93;
+  background-color: var(--button-bacground);
   border: none;
   color: white;
   padding: 15px 32px;
@@ -26,16 +31,107 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   cursor: pointer;
-  width: 50%;
+  width: 70%;
   border-radius: 5px;
 }
 .button-class:active {
   opacity: 80%;
 }
+.button-class:hover {
+  opacity: 80%;
+}
 ul {
   list-style: none;
+  column-count: 3;
 }
 #loading-message {
   text-align: center;
   font-style: italic;
+}
+#modal-container {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+
+  z-index: 999;
+
+  overflow: auto;
+  display: none;
+  text-align: center;
+}
+
+#modal-container.is-visible {
+  display: block;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  background: var(--modal-background);
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+  text-align: left;
+  border: 1px solid black;
+}
+
+.modal-close {
+  align-self: flex-end;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.pokemon-info {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.pokemon-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 32px;
+}
+
+.modal h1 {
+  margin-top: 0;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+.pokemon-nav1 {
+  cursor: pointer;
+  user-select: none;
+  color: blue;
+}
+.pokemon-nav2 {
+  cursor: pointer;
+  user-select: none;
+  color: blue;
+}
+.pokemon-nav1--disabled {
+  visibility: hidden;
+}
+.pokemon-nav2--disabled {
+  visibility: hidden;
 }
