--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 header {
-  width: 100%;
+  min-width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -40,6 +40,7 @@ h1.page-title {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   font-size: 16px;
   margin: 4px 2px;
   margin-left: auto;
@@ -161,8 +162,8 @@ ul {
   border: 1px solid blue;
 }
 .header-img {
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
 }
 .pokemon-img {
   width: 200px;
