--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,11 @@ body {
   background-color: #59b7d6;
   font-family: Arial, Helvetica, sans-serif;
 }
+@media (max-width: 767px) {
+  .header-img {
+    display: none;
+  }
+}
 header {
   display: flex;
   flex-direction: row;
@@ -28,9 +33,13 @@ h1 {
   font-weight: bold;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
-h1.page-title {
+.title-img {
+  display: block;
+  width: 50%;
   margin-top: 100px;
-  font-size: 60px;
+  margin-right: auto;
+  margin-left: auto;
+  height: 100px;
 }
 .button-class {
   background-color: var(--button-background);
@@ -60,7 +69,8 @@ h1.page-title {
 }
 ul.list-group-horizontal {
   list-style: none;
-  column-count: 5;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
 }
 #loading-message {
   text-align: center;
@@ -123,6 +133,10 @@ p.modal-item {
   visibility: hidden;
 }
 .header-img {
+  width: 70px;
+  height: 70px;
+}
+.header-img1 {
   width: 70px;
   height: 70px;
 }
