--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,15 @@ body {
   .header-img {
     display: none;
   }
+  .pokemon-img2 {
+    display: none;
+  }
+  .pokemon-img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 50%;
+  }
 }
 header {
   display: flex;
