--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h1 {
 }
 .title-img {
   display: block;
-  width: 50%;
+  width: 250px;
   margin-top: 100px;
   margin-right: auto;
   margin-left: auto;
